# CppServerFramework

./: CMakeLists.txt  study.md
.ccls-cache/@@home@fang@workspace@fangser/: @usr@include@alloca.h.blob  @usr@include@arpa@inet.h.blob  @usr@include@asm-generic@bitsperlong.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@asm-generic@int-ll64.h.blob  @usr@include@asm-generic@ioctl.h.blob  @usr@include@asm-generic@ioctls.h.blob  @usr@include@asm-generic@posix_types.h.blob  @usr@include@asm-generic@socket.h.blob  @usr@include@asm-generic@sockios.h.blob  @usr@include@asm-generic@types.h.blob  @usr@include@assert.h.blob  @usr@include@byteswap.h.blob  @usr@include@c++@9@algorithm.blob  @usr@include@c++@9@array.blob  @usr@include@c++@9@atomic.blob  @usr@include@c++@9@backward@auto_ptr.h.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@algorithmfwd.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocated_ptr.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@atomic_base.h.blob  @usr@include@c++@9@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@codecvt.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@erase_if.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@fstream.tcc.blob  (+718 more)
.ccls-cache/@home@fang@workspace@fangser/: .ccls-cache@@@home@fang@workspace@fangser@@usr@include@arpa@inet.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@include@asm-generic@socket.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@include@netdb.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@include@netinet@in.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@include@x86_64-linux-gnu@bits@socket.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@include@x86_64-linux-gnu@bits@socket_type.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@include@x86_64-linux-gnu@bits@types@struct_iovec.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@include@x86_64-linux-gnu@c++@9@bits@c++config.h.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@local@include@boost@core@swap.hpp.blob  .ccls-cache@@@home@fang@workspace@fangser@@usr@local@include@boost@range@detail@common.hpp.blob  .ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@inc@address.h  .ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@inc@address.h.blob  .ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@inc@fd_manager.h  .ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@inc@fd_manager.h.blob  .ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@inc@fiber.h.blob  .ccls-cache@@home@fang@workspace@fangser@.ccls-cache@@home@fang@workspace@fangser@http@http.h  (+118 more)
db/: db.h  mysql.cc  mysql.h
http/: http.cc  http.h  http11_parser.rl.cc  http_connection.cc  http_connection.h  http_parser.cc  http_parser.h  http_server.cc  http_server.h  http_session.cc  http_session.h  httpclient_parser.cc  httpclient_parser.rl  httpclient_parser.rl.cc  servlet.cc  servlet.h  ws_server.cc  ws_server.h  ws_servlet.cc  ws_servlet.h  ws_session.cc  ws_session.h
inc/: .hook.h.swp  address.h  application.h  bytearray.h  config.h  daemon.h  endian_.h  env.h  fd_manager.h  fiber.h  helpc.h  iomanager.h  library.h  log.h  macro.h  module.h  mutex.h  mydef.h  protocol.h  singleton.h  socket.h  stream.h  tcp_server.h  thread.h  timer.h  uri.h  uri.rl  uri.rl.cc
src/: address.cc  application.cc  bytearray.cc  config.cc  daemon.cc  env.cc  fd_manager.cc  fiber.cc  helpc.cc  hook.cc  iomanager.cc  library.cc  log.cc  moduel.cc  mutex.cc  protocol.cc  scheduler.cc  socket.cc  stream.cc  tcp_server.cc  timer.cc
stream/: socket_stream.cc  socket_stream.h  zlib_stream.cc  zlib_stream.h
tests/: config_test.cc  daemon_test.cc  env_test.cc  hook_test.cc  http_test.cc  test_bytearray.cc  test_scheduler.cc
